buildscript {
    dependencies {
        classpath 'org.flywaydb:flyway-mysql:11.14.0'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.10'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.flywaydb.flyway' version '11.14.0'
    id 'jacoco'
    id 'com.epages.restdocs-api-spec' version '0.19.4'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

flyway {
    configFiles = ["$rootDir/conf/flyway.conf"]
    locations = ['filesystem:src/main/resources/db/migration']
    baselineOnMigrate = true
    baselineVersion = 1
    cleanDisabled = false
}

jacoco {
    toolVersion = "0.8.14"
}

group = 'com.sparta'
version = '0.0.1-SNAPSHOT'
description = 'CouponPop'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // [Spring Boot Starter]
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    // [DB]
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    // [Spatial/GIS]
    implementation 'org.hibernate.orm:hibernate-spatial:6.5.3.Final'
    implementation 'org.locationtech.jts:jts-core:1.19.0'

    // [Querydsl]
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // [Compile & Runtime & Test]
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.springframework.security:spring-security-test'

    // [Flyway]
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // [JWT]
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // [Firebase Admin SDK]
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // [Redis]
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.29.0'

    // [Jackson]
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // [Elasticsearch]
    implementation 'co.elastic.clients:elasticsearch-java'

    // [Restdocs]
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.19.4'
}

openapi3 {
    server = '/'
    title = 'CouponPop API'
    description = 'CouponPop 서비스의 REST API 명세서'
    outputDirectory = file('build/api-spec')
    version = "0.0.1-SNAPSHOT"
    format = 'json'
}

def jacocoExcludes = [
        // --- Spring Boot/JPA 관련 ---
        '**/configuration/**',
        '**/config/**',
        '**/dto/**',
        '**/exception/**',
        '**/error/**',
        '**/filter/**',
        '**/handler/**',
        '**/security/**',
        '**/util/**',

        // --- QueryDSL 관련 ---
        '**/Q*.class',

        // --- 기타 생성 코드 ---
        '**/*Application.class',
        '**/Test*.class',

        // --- Flyway 관련 ---
        '**/db/migration/**',

        // --- Swagger 관련 ---
        '**/static/docs/**',
]
tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}


tasks.named('jacocoTestReport', JacocoReport) {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation.set(layout.buildDirectory.dir('jacocoHtml'))
    }
}

afterEvaluate {
    def configureExclusions = {
        classDirectories.setFrom(
                files(classDirectories.files.collect {
                    fileTree(dir: it, exclude: jacocoExcludes)
                })
        )
    }
    tasks.named('jacocoTestReport', JacocoReport).configure(configureExclusions)
    tasks.named('jacocoTestCoverageVerification', JacocoCoverageVerification).configure(configureExclusions)

    tasks.findByName('openapi3')?.doLast {
        def file = file('build/api-spec/openapi3.json')
        if (!file.exists()) {
            println "⚠openapi3.json not found."
            return
        }

        def json = new groovy.json.JsonSlurper().parse(file)
        if (!json.components) json.components = [:]
        if (!json.components.securitySchemes) json.components.securitySchemes = [:]

        json.components.securitySchemes["Bearer Authentication"] = [
                type        : "http",
                scheme      : "bearer",
                bearerFormat: "JWT"
        ]
        json.security = [["Bearer Authentication": []]]

        file.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(json))
        println "JWT SecurityScheme into openapi3.json 주입 완료"
    }
}

tasks.named("jacocoTestCoverageVerification", JacocoCoverageVerification) {
    dependsOn tasks.named('jacocoTestReport')
    violationRules {
        rule {
            enabled = true
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                minimum = 0.60
            } // BUNDLE 기준 line covered ratio 60% 이상
        }
    }
}

tasks.register('copyOpenApiSpec', Copy) {
    dependsOn 'openapi3'
    from 'build/api-spec/openapi3.json'
    into 'build/resources/main/static/docs'
    doFirst {
        println "Copying OpenAPI spec from build/api-spec/ to static/docs..."
    }
}

tasks.named('jar') {
    dependsOn 'copyOpenApiSpec'
}

tasks.named('bootJar') {
    dependsOn 'copyOpenApiSpec'
}

tasks.named('resolveMainClassName') {
    dependsOn 'copyOpenApiSpec'
}

tasks.named('build') {
    dependsOn 'jacocoTestCoverageVerification', 'openapi3'
    doLast {
        println "Build completed with coverage verification & API spec generation."
    }
}

clean {
    delete file('src/main/generated')
}